--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="" class="head__darkness">
 </head>
 <body>
     <header class="header"> <!--Верхняя секция сайта-->
         <article class="header__heading"> <!--Отдельный раздел внутри блока (секции)-->
-            <img src="/img/logo.png" alt="logo" class="header__logo"> <!--Вставка картинок-->
-            <img src="/img/title.png" alt="title" class="header__title">
+            <img src="./img/logo.png" alt="logo" class="header__logo"> <!--Вставка картинок-->
+            <img src="./img/title.png" alt="title" class="header__title">
         </article>
         <nav class="header__nav"> <!--Раздел с навигацией-->
             <ol class="header__navlist"> <!--Создание списка с ссылками-->
@@ -26,13 +26,13 @@
         </nav>
         <nav class="header__navuser">
             <ol class="header__navuserlist">
-                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/fO7OEGVq44E?feature=share" target="_blank"><img src="/img/account.png" alt="account" class="header__navuserimg"></a></li>
-                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/jvURXwjCIa0?feature=share" target="_blank"><img src="/img/search.png" alt="search" class="header__navuserimg"></a></li>
-                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/hvoYB-Smr6w?feature=share" target="_blank"><img src="/img/heart.png" alt="heart" class="header__navuserimg"></a></li>
-                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/Qgp05kb8t-M?feature=share" target="_blank"><img src="/img/shop.png" alt="shop" class="header__navuserimg"></a></li>
+                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/fO7OEGVq44E?feature=share" target="_blank"><img src="./img/account.png" alt="account" class="header__navuserimg"></a></li>
+                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/jvURXwjCIa0?feature=share" target="_blank"><img src="./img/search.png" alt="search" class="header__navuserimg"></a></li>
+                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/hvoYB-Smr6w?feature=share" target="_blank"><img src="./img/heart.png" alt="heart" class="header__navuserimg"></a></li>
+                <li class="header__navuseritem"><a href="https://www.youtube.com/shorts/Qgp05kb8t-M?feature=share" target="_blank"><img src="./img/shop.png" alt="shop" class="header__navuserimg"></a></li>
             </ol>
         </nav>
-        <button id="mode"><img src="/img/moon.jpg" class="header__modeimg"></button>
+        <button id="mode"><img src="./img/moon.jpg" class="header__modeimg"></button>
     </header>
     <section class="firstsection"> <!--Отдельный блок сайта (секция)-->
         <article class="firstsection__text"> <!--Текстовый блок в первой секции-->
@@ -48,21 +48,21 @@
         <article class="notice"></article>
         <article class="secondsection__blocks">
              <article class="secondsection__block">
-                <img src="/img/dining.png" alt="dining" class="secondsection__img">
+                <img src="./img/dining.png" alt="dining" class="secondsection__img">
                 <h4 class="secondsection__textunderimg">Dining</h4> <!--Подпись к картинке-->
                 <form>
                     <input type="button" class="secondsection__seemore" value="See more"></input>
                 </form>
             </article>
              <article class="secondsection__block">
-                <img src="/img/living.png" alt="living" class="secondsection__img">
+                <img src="./img/living.png" alt="living" class="secondsection__img">
                 <h4 class="secondsection__textunderimg">Living</h4>
                 <form>
                     <input type="button" class="secondsection__seemore" value="See more"></input>
                 </form>
             </article>
             <article class="secondsection__block">
-                <img src="/img/bedroom.png" alt="bedroom" class="secondsection__img">
+                <img src="./img/bedroom.png" alt="bedroom" class="secondsection__img">
                 <h4 class="secondsection__textunderimg">Bedroom</h4>
                 <form>
                     <input type="button" class="secondsection__seemore" value="See more"></input>
@@ -74,4 +74,5 @@
 
     </script>
 </body>
+
 </html>
