--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3 class="firstsection__overheading">New Arrival</h3> <!--Подзаголовок-->
             <h1 class="firstsection__heading">Discover Our New Collection</h1> <!--Главный заголовок сайта-->
             <h3 class="firstsection__underheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis.</h3> <!--Дополнительный текст-->
-            <a href="https://www.youtube.com/shorts/l9J07J5VvPM?feature=share" target="_blank"><img src="/img/buynow.png" alt="buynow" class="firstsection__byenow"></a>
+            <a href="https://www.youtube.com/shorts/l9J07J5VvPM?feature=share" target="_blank"><img src="./img/buynow.png" alt="buynow" class="firstsection__byenow"></a>
         </article>
     </section>
     <section class="secondsection">
@@ -76,3 +76,4 @@
 </body>
 
 </html>
+
